derive_tests/tests/compile_fail/not_a_struct.stderr
error: #[derive(Validate)] can only be used on structs with named fields
 --> tests/compile_fail/not_a_struct.rs:4:1
  |
4 | pub enum NotAStruct {
  | ^^^
